# mtbls-validation

./: .gitignore  .gitlab-ci.yml  404.html  CHANGES.md  MetaboLights-Validations-v2.0.xlsx  README.md  build_bundle.sh  index.html  mkdocs.yml  mtbls-validation.wasm  policy.wasm  pyproject.toml  sitemap.xml
MetaboLightsRules/: index.html
bundle/: mtbls-validation.wasm
docs/: MetaboLightsRules.md  index.md  mtbls-validation.wasm
docs/json/: all_controls.json  all_rules.json  all_templates.json
docs/validation-rules/: all-rules.md  assay-validation-rules.md  file-validation-rules.md  input-validation-rules.md  investigation-validation-rules.md  metabolite-validation-rules.md  sample-validation-rules.md
json/: all_controls.json  all_rules.json  all_templates.json  violations.json
scripts/: check_unit_tests.py  control_list_models.py  create_control_lists.py  create_rego_test_files.py  create_template_documentation.py  fix_test_file_names.py  format_controls.py  models.py  sync_rules.py  update.py  update_repository.py  utils.py  validation_models.py  zipfolders.ps1  zipfolders.sh
scripts/test_data/: minimum_01.py
scripts/update/pages/: utils.py  (+6 more)
search/: search_index.json
test-data/: input.json
validation/: field_match.rego  functions.rego  input.json  input_x.jsonx  phase1_definitions.rego  phase1_violations_assay.rego  phase1_violations_assignment.rego  phase1_violations_input.rego  phase1_violations_investigation.rego  phase1_violations_sample.rego  phase2_definitions.rego  phase2_violations_assays.rego  phase2_violations_samples.rego  phase3_violations.rego  phase4_violations.rego  report.rego
(+706 files in other folders)
