[project]
name = "mtbls-validation"
version = "0.1.0"
description = "MetaboLights Validation Framework"
authors = [{ name = "MetaboLights Team", email = "metabolights-help@ebi.ac.uk" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.10.2",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "metabolights-utils>=1.4.0,<2",
    "pydantic2-to-typescript>=0.0.1",
    "jsonschema>=4.25.1",
]

[tool.hatch.build.targets.sdist]
include = ["scripts"]

[tool.hatch.build.targets.wheel]
include = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
