[project]
name = "mtbls-validation"
version = "0.1.0"
description = "MetaboLights Validation Framework"
authors = [{ name = "MetaboLights Team", email = "metabolights-help@ebi.ac.uk" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.10.2",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
    "metabolights-utils>=1.4.18,<2",
    "pydantic2-to-typescript>=0.0.1",
    "jsonschema>=4.25.1",
    "pybreaker>=1.4.1",
    "redis>=7.0.1",
    "keyring>=25.7.0",
    "mkdocs-material>=9.7.1",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.sdist]
include = ["scripts"]

[tool.hatch.build.targets.wheel]
include = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "Q"]
ignore = [ "ANN401"]

fixable = ["ALL"]
